# DCA-Juego

./: .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: build-deb.yml  ci.yml
assets/maps/: level1.txt  map_1.txt  map_16x16.txt  map_2.txt  map_3.txt  map_4.txt  map_5.txt  map_6.txt  map_l_32x20.txt  map_m_20x16.txt  map_xl_40x20.txt
debian/: changelog  control  files  game.substvars  rules
documentacion/: Hito1.md  Hito2-Entregable1.md  Hito2-Entregable2.md
locale/: messages.pot
locale/en/LC_MESSAGES/: messages.mo  messages.po
locale/es/LC_MESSAGES/: messages.mo  messages.po
src/: Config.hpp  Enemy.cpp  Enemy.hpp  GameOverState.cpp  GameOverState.hpp  MainGameState.cpp  MainGameState.hpp  Map.cpp  Map.hpp  Mechanisim.cpp  Mechanism.hpp  Player.cpp  Player.hpp  Spikes.cpp  Spikes.hpp  StartGameState.cpp  StartGameState.hpp  StateMachine.cpp  StateMachine.hpp  main.cpp  player.cpp  player.hpp
src/core/: Config.hpp  DevModeState.cpp  DevModeState.hpp  GameOverState.cpp  GameOverState.hpp  GameState.hpp  Localization.cpp  Localization.hpp  MainGameState.cpp  MainGameState.hpp  PlayerSelection.cpp  PlayerSelection.hpp  PlayerSpriteCatalog.cpp  PlayerSpriteCatalog.hpp  ResourceManager.cpp  ResourceManager.hpp  SelectPlayerState.cpp  SelectPlayerState.hpp  StartGameState.cpp  StartGameState.hpp  StateMachine.cpp  StateMachine.hpp  main.cpp
src/ecs/: Components.hpp  Ecs.hpp  Ecstypes.hpp  Systems.hpp
src/ecs/components/: PlayerComponents.hpp  WorldComponents.hpp
src/ecs/components/Enemy/: EnemyIAComponent.hpp
src/ecs/components/Player/: PlayerCheatComponent.hpp  PlayerInputComponent.hpp  PlayerStateComponent.hpp  PlayerStatsComponent.hpp
src/ecs/components/World/: AnimationComponent.hpp  ColliderComponent.hpp  GridClipComponent.hpp  ItemComponent.hpp  ManualSpriteComponent.hpp  MechanismComponent.hpp  MovementComponent.hpp  SpikeComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp
src/ecs/systems/: CollisionSystems.cpp  CollisionSystems.hpp  EnemySystems.cpp  EnemySystems.hpp  LevelSetupSystem.cpp  LevelSetupSystem.hpp  PlayerSystems.cpp  PlayerSystems.hpp  RenderSystems.cpp  RenderSystems.hpp  WorldSystems.cpp  WorldSystems.hpp
src/objects/: Enemy.cpp  Enemy.hpp  Map.cpp  Map.hpp  Mechanism.cpp  Mechanism.hpp  Player.cpp  Player.hpp  Spikes.cpp  Spikes.hpp
tests/: CMakeLists.txt  docu_tests.md  dummy_test.cpp  raylib_stubs.cpp  raylib_stubs.hpp  test_basic.cpp  test_map_io.cpp  test_map_mechanisms.cpp  test_player_selection.cpp  test_resource_manager.cpp  test_state_machine.cpp
tests/fixtures/: mechanisms_missing_target.txt  mechanisms_missing_trigger.txt  mechanisms_valid.txt  no_player_map.txt  non_rect_map.txt  valid_map.txt
